--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "structcheck"
-version = "1.0.0"
-description = ""
+version = "1.0.3"
+description = "Project to check not presents and not allowed files and folders using regex. Include also some datums corresponding validations in folders and filenames. This project don't check files contents!"
 authors = ["vincentBenet <vincent.benet@outlook.fr>"]
 readme = "README.md"
 
@@ -9,9 +9,20 @@ readme = "README.md"
 python = "^3.9"
 
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.group.test.dependencies]
 unittest = "^0.0"
 pylint = "^2.15.3"
+
+
+[tool.poetry.group.doc.dependencies]
+Sphinx = "^5.2.2"
+
+
+[[tool.poetry.source]]
+name = "foo"
+url = "https://test.pypi.org/simple/"
+default = false
+secondary = false
 
 [build-system]
 requires = ["poetry-core"]
